--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,487 @@ body {
   -webkit-filter: drop-shadow(0px 0px 5px #040404);
           filter: drop-shadow(0px 0px 5px #040404);
 }
+
+.container2 {
+  max-width: 930px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.introblocks {
+  font-family: "Roboto Condensed";
+  padding: 100px 0;
+}
+.introblocks__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0 20px;
+}
+.introblocks__block-1 {
+  display: block;
+}
+.introblocks__block-1:not(:last-child) {
+  margin-bottom: 100px;
+}
+.introblocks__block-2 img {
+  margin: 0 17px;
+}
+.introblocks__block-2 .introblock__text {
+  max-width: 352px;
+}
+.introblocks__block-2:not(:last-child) {
+  margin-bottom: 66px;
+}
+.introblocks__block-3 .introblocks__block__column {
+  width: 50%;
+}
+.introblocks__block-3 .introblocks__block__column:first-child {
+  width: 438px;
+}
+.introblocks__block-3 .introblock__text {
+  max-width: 377px;
+}
+.introblocks__table {
+  padding: 10px 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+.introblocks__table td {
+  padding: 10px 0;
+}
+.introblocks__table td:not(:last-child) {
+  padding-right: 20px;
+}
+
+.title {
+  font-weight: 300;
+  font-size: 32px;
+  line-height: 1.18;
+  text-transform: uppercase;
+}
+
+.introblock__pic-container {
+  position: relative;
+  padding-bottom: 46.24%;
+}
+.introblock__pic-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.introblock__title:not(:last-child) {
+  margin-bottom: 30px;
+}
+.introblock__texts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0 20px;
+  margin-right: 10px;
+}
+.introblock__texts .introblock__text {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+.introblock__text {
+  font-size: 14px;
+  line-height: 120%;
+}
+.introblock__text:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.track {
+  width: 100%;
+  padding: 40px 0 90px 0;
+  height: 890px;
+  background: url("/img/bg2.png") no-repeat center/cover;
+  overflow: hidden;
+}
+.track__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+}
+.track__img {
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 742px;
+}
+.track__img div {
+  width: 100%;
+  padding-bottom: 45.7%;
+  position: relative;
+}
+.track__img img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.track__texts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 434px;
+  gap: 30px 0;
+}
+.track__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 120%;
+}
+
+.evo-black {
+  height: 870px;
+  padding: 100px 0 50px;
+  background: #363636;
+  color: #FFFFFF;
+}
+.evo-black img {
+  max-width: 725px;
+}
+.evo-black dl {
+  font-family: "Roboto Condensed";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 65px;
+}
+.evo-black__container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+.evo-black__container::before {
+  content: "";
+  position: absolute;
+  background: url("/img/pol1.svg") no-repeat center/contain;
+  width: 185px;
+  height: 213px;
+  left: -140px;
+  top: 217px;
+}
+.evo-black__container::after {
+  content: "";
+  position: absolute;
+  background: url("/img/pol2.svg") no-repeat center/contain;
+  width: 498px;
+  height: 572px;
+  left: -35px;
+  top: 300px;
+}
+.evo-black__descr {
+  position: relative;
+  z-index: 2;
+}
+.evo-black__texts {
+  font-family: "Roboto Condensed";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0 50px;
+}
+.evo-black__title {
+  font-weight: 300;
+  font-size: 32px;
+  line-height: 1.1875;
+  text-transform: uppercase;
+}
+.evo-black__content {
+  padding-right: 12px;
+  max-width: 50%;
+}
+.evo-black__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+}
+.evo-black__text:not(:last-child) {
+  margin-bottom: 30px;
+}
+.evo-black__car {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 58px;
+}
+
+.evo-white {
+  padding: 126px 0 100px;
+  font-family: "Roboto Condensed";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+}
+.evo-white__container {
+  position: relative;
+}
+.evo-white__container::before {
+  content: "";
+  position: absolute;
+  background: url("/img/pol3.png") no-repeat center/contain;
+  width: 257px;
+  height: 246px;
+  left: 380px;
+  top: -146px;
+}
+.evo-white__container::after {
+  content: "";
+  position: absolute;
+  background: url("/img/pol4.png") no-repeat center/contain;
+  width: 311px;
+  height: 324px;
+  left: 611px;
+  top: 0;
+}
+.evo-white__text {
+  margin-bottom: 30px;
+  color: #040404;
+}
+.evo-white__text:first-child {
+  max-width: 285px;
+}
+.evo-white__text:nth-child(2) {
+  max-width: 437px;
+}
+.evo-white__text:nth-child(3) {
+  max-width: 590px;
+}
+.evo-white__link {
+  background: url("/img/car-video.png") no-repeat center/contain;
+  margin-top: 100px;
+  height: 256px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 4px;
+}
+.evo-white__link-text {
+  color: #FFFFFF;
+}
+
+.blog {
+  padding-bottom: 100px;
+}
+.blog__title {
+  font-weight: 300;
+  font-size: 32px;
+  margin-bottom: 30px;
+}
+.blog__blocks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 20px;
+}
+.blog__quotes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px 30px;
+  max-width: 50%;
+}
+.blog__image {
+  max-width: 50%;
+}
+
+.swiper {
+  position: relative;
+  padding: 50px 0 100px;
+}
+
+.slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.slide__image {
+  margin-bottom: 20px;
+}
+.slide__title {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.15;
+  min-height: 46px;
+  margin-bottom: 10px;
+}
+.slide__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  margin-bottom: 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+.slide__link {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.2;
+  color: #363636;
+}
+
+.swiper-button-left,
+.swiper-button-right {
+  position: absolute;
+  -webkit-transform: translateX(5px);
+          transform: translateX(5px);
+  left: 50%;
+  top: 0;
+  z-index: 9;
+  display: inline-block;
+}
+
+.swiper-button-left {
+  -webkit-transform: translateX(-49px);
+          transform: translateX(-49px);
+}
+
+.quote {
+  font-size: 14px;
+  line-height: 1.2;
+}
+.quote__subtitle {
+  font-size: 12px;
+  color: #9F6B08;
+  margin-bottom: 3px;
+}
+.quote__name {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.quote__content {
+  font-style: italic;
+  font-weight: 400;
+}
+
+.footer {
+  background: #363636;
+  color: #FFFFFF;
+  padding: 100px 0 80px;
+}
+.footer__title {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 32px;
+  margin-bottom: 50px;
+}
+.footer__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 20px;
+  margin-bottom: 100px;
+}
+.footer__contacts {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 50px 0;
+}
+.footer__contacts dd {
+  margin-bottom: 10px;
+}
+.footer__contacts dt {
+  margin-bottom: 20px;
+}
+.footer__social ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 20px;
+}
+.footer__adress {
+  width: 50%;
+}
+.footer__adress dt {
+  margin-bottom: 20px;
+}
+.footer__adress dd {
+  margin-bottom: 20px;
+}
+.footer__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#map {
+  height: 250px;
+}
