--- a/css/sccs/style.scss
+++ b/css/sccs/style.scss
@@ -16,6 +16,14 @@ body {
     font-weight: 400;
 }
 
+.body__menu-open {
+    overflow: hidden;
+}
+
+.wrapper {
+    // position: relative;
+}
+
 .header {
     background: linear-gradient(180deg, #D8D4CA 0%, rgba(217, 217, 217, 0) 100%);
     position: absolute;
@@ -40,6 +48,31 @@ body {
 //menu
 
 .menu {
+    // position: relative;
+
+    &__burger {
+        position: relative;
+        z-index: 2;
+        display: flex;
+        width: 60px;
+        height: 40px;
+        flex-direction: column;
+        gap: 10px 0;
+        margin-top: 10px;
+        display: none;
+
+        & span {
+            border-radius: 4px;
+            border: #ffc354 1px solid;
+            height: 100%;
+            display: block;
+            background-color: #000000;
+        }
+    }
+
+    &__list {
+        display: none;
+    }
 
     &__left,
     &__right {
@@ -64,6 +97,8 @@ body {
     }
 
     &__logo {
+        position: relative;
+        z-index: 2;
 
         & img {
             transition: 0.3s ease;
@@ -88,12 +123,12 @@ body {
 .landing {
     position: relative;
     background: url("/img/bg.jpg") no-repeat center/cover;
-    min-height: 800px;
+    min-height: 100vh;
 
     &__container {}
 
     &__content {
-        padding: 100px;
+        padding: 100px 10px;
         text-align: center;
         font-family: 'Impact';
         line-height: 1.22;
@@ -278,8 +313,8 @@ body {
 
 .track {
     width: 100%;
-    padding: 40px 0 90px 0;
-    height: 890px;
+    padding: 40px 0 40px 0;
+    height: 100vh;
     background: url("/img/bg2.png") no-repeat center / cover;
     overflow: hidden;
 
@@ -545,6 +580,12 @@ body {
     // min-height: 100%;
 
     &__image {
+        width: 100%;
+
+        & img {
+            width: 100%;
+        }
+
         margin-bottom: 20px;
     }
 
@@ -673,6 +714,306 @@ body {
     height: 250px;
 }
 
-.container2 {}
 
-.social {}
+@media (max-width: 1240px) {
+    .menu {
+
+        &__left,
+        &__right {
+            display: none;
+        }
+
+        ;
+
+        &__list {
+            display: flex;
+            justify-content: space-between;
+            gap: 0 40px;
+            padding-top: 25px;
+        }
+    }
+}
+
+// @media (max-width: 965.5px) {
+//     .menu__list {
+
+//         transform: translateY(-150%);
+//     }
+
+// }
+
+
+@media (max-width: 1140px) {
+    .landing {
+        background-position: left;
+
+        &__title {
+            font-size: 60px;
+        }
+
+        ;
+
+        &__subtitle {
+            font-size: 40px;
+        }
+    }
+}
+
+@media (max-width: 840px) {
+
+    .introblock__texts {
+        display: block;
+
+        & b {
+            display: block;
+            margin-bottom: 20px;
+        }
+    }
+
+    .introblocks__block-2 {
+        display: block;
+
+        & img {
+            display: inline-block;
+            margin: 0 auto;
+            width: 100%;
+        }
+
+        & .introblock__text {
+            max-width: 100%;
+
+            &:last-child {
+                display: block;
+                margin-bottom: 20px;
+            }
+        }
+    }
+
+    .introblocks__block-3 {
+        display: block;
+
+        & .introblocks__block__column {
+            width: 100%;
+
+            &:first-child {
+                width: 100%;
+            }
+        }
+
+        & .introblocks__table {
+            width: 100%;
+        }
+
+        & .introblock__text {
+            min-width: 100%;
+            display: block;
+            margin-bottom: 20px;
+        }
+
+    }
+}
+
+@media (max-width: 966px) {
+
+    .evo-white__container::after {
+        display: none;
+    }
+
+    .menu {
+        &__burger {
+            display: flex;
+        }
+
+        &__list {
+            display: none;
+
+        }
+    }
+
+    .menu__list {
+        // display: none;
+        display: flex;
+        padding-top: 150px;
+        flex-direction: column;
+        gap: 25px;
+        position: absolute;
+        justify-content: start;
+        transform: translateY(-150%);
+        transition: top 1s ease;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 100vh;
+        text-align: center;
+
+        background-color: rgba(black, 0.9);
+
+        & .menu__option {
+            font-size: 4vh;
+            color: white;
+        }
+
+        & a {
+            display: block;
+
+            &:hover {
+                background-color: rgba(#ffffff, 0.7);
+            }
+        }
+    }
+
+    .menu__list.menu__list-open {
+        // display: none;
+        top: 150vh;
+
+        & .menu__option {
+            font-size: 4vh;
+            color: white;
+        }
+
+        & a {
+            display: block;
+
+        }
+    }
+
+    .track__texts {
+        max-width: 100%;
+    }
+
+}
+
+@media (max-width: 794px) {
+
+    .evo-black__texts {
+        display: block;
+
+        & .evo-black__title {
+            margin-bottom: 30px;
+        }
+
+        & .evo-black__content {
+            max-width: 100%;
+        }
+    }
+
+    .blog__blocks {
+        img {
+            order: -1;
+            display: block;
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
+        flex-direction: column;
+    }
+
+    .evo-black img {
+        width: 90%;
+    }
+
+    .blog__quotes {
+        max-width: 100%;
+        width: 100%;
+    }
+
+}
+
+@media (max-width: 670px) {
+
+    .evo-black__descr {
+        & dl {
+            flex-direction: column;
+            text-align: center;
+            gap: 10px 0;
+        }
+    }
+
+    .evo-white__container::before {
+        display: none;
+    }
+
+    .menu__logo {
+        & img {
+
+            height: 70px;
+        }
+    }
+
+    .landing {
+        &__title {
+            font-size: 50px;
+        }
+
+        ;
+
+        &__subtitle {
+            font-size: 30px;
+
+            & span {
+                font-size: 20px;
+                text-shadow: 0 0 2px #ffffff;
+            }
+        }
+    }
+}
+
+@media (max-width: 550px) {
+    .evo-white__link {
+        margin-top: 0;
+    }
+
+    .footer,
+    .blog,
+    .swiper,
+    .evo-white,
+    .intdoducing__blocks {
+        padding-bottom: 50px;
+    }
+
+    .footer,
+    .evo-white,
+    .evo-black,
+    .intdoducing__blocks {
+        padding-top: 50px;
+    }
+
+
+    .footer {
+
+        &__info {
+            display: block;
+            margin-bottom: 50px;
+        }
+
+        &__contacts {
+            margin-bottom: 20px;
+        }
+
+        &__adress {
+            width: 100%;
+
+        }
+
+        &__bottom {
+            flex-direction: column;
+            gap: 20px 0;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .evo-black__container::after {
+        display: none;
+    }
+}
+
+
+@media (max-width: 340px) {
+    .landing {
+        &__title {
+            font-size: 45px;
+        }
+    }
+}
