--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,10 @@ body {
   font-weight: 400;
 }
 
+.body__menu-open {
+  overflow: hidden;
+}
+
 .header {
   background: -webkit-gradient(linear, left top, left bottom, from(#D8D4CA), to(rgba(217, 217, 217, 0)));
   background: linear-gradient(180deg, #D8D4CA 0%, rgba(217, 217, 217, 0) 100%);
@@ -124,6 +128,32 @@ body {
   margin: 0 auto;
 }
 
+.menu__burger {
+  position: relative;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 60px;
+  height: 40px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px 0;
+  margin-top: 10px;
+  display: none;
+}
+.menu__burger span {
+  border-radius: 4px;
+  border: #ffc354 1px solid;
+  height: 100%;
+  display: block;
+  background-color: #000000;
+}
+.menu__list {
+  display: none;
+}
 .menu__left, .menu__right {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -144,6 +174,10 @@ body {
   text-decoration: underline;
   color: black;
 }
+.menu__logo {
+  position: relative;
+  z-index: 2;
+}
 .menu__logo img {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
@@ -159,10 +193,10 @@ body {
 .landing {
   position: relative;
   background: url("/img/bg.jpg") no-repeat center/cover;
-  min-height: 800px;
+  min-height: 100vh;
 }
 .landing__content {
-  padding: 100px;
+  padding: 100px 10px;
   text-align: center;
   font-family: "Impact";
   line-height: 1.22;
@@ -322,8 +356,8 @@ body {
 
 .track {
   width: 100%;
-  padding: 40px 0 90px 0;
-  height: 890px;
+  padding: 40px 0 40px 0;
+  height: 100vh;
   background: url("/img/bg2.png") no-repeat center/cover;
   overflow: hidden;
 }
@@ -576,7 +610,11 @@ body {
           flex-direction: column;
 }
 .slide__image {
+  width: 100%;
   margin-bottom: 20px;
+}
+.slide__image img {
+  width: 100%;
 }
 .slide__title {
   font-weight: 400;
@@ -699,4 +737,237 @@ body {
 
 #map {
   height: 250px;
+}
+
+@media (max-width: 1240px) {
+  .menu__left, .menu__right {
+    display: none;
+  }
+  .menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 0 40px;
+    padding-top: 25px;
+  }
+}
+@media (max-width: 1140px) {
+  .landing {
+    background-position: left;
+  }
+  .landing__title {
+    font-size: 60px;
+  }
+  .landing__subtitle {
+    font-size: 40px;
+  }
+}
+@media (max-width: 840px) {
+  .introblock__texts {
+    display: block;
+  }
+  .introblock__texts b {
+    display: block;
+    margin-bottom: 20px;
+  }
+  .introblocks__block-2 {
+    display: block;
+  }
+  .introblocks__block-2 img {
+    display: inline-block;
+    margin: 0 auto;
+    width: 100%;
+  }
+  .introblocks__block-2 .introblock__text {
+    max-width: 100%;
+  }
+  .introblocks__block-2 .introblock__text:last-child {
+    display: block;
+    margin-bottom: 20px;
+  }
+  .introblocks__block-3 {
+    display: block;
+  }
+  .introblocks__block-3 .introblocks__block__column {
+    width: 100%;
+  }
+  .introblocks__block-3 .introblocks__block__column:first-child {
+    width: 100%;
+  }
+  .introblocks__block-3 .introblocks__table {
+    width: 100%;
+  }
+  .introblocks__block-3 .introblock__text {
+    min-width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 966px) {
+  .evo-white__container::after {
+    display: none;
+  }
+  .menu__burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .menu__list {
+    display: none;
+  }
+  .menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 150px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 25px;
+    position: absolute;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-transform: translateY(-150%);
+            transform: translateY(-150%);
+    -webkit-transition: top 1s ease;
+    transition: top 1s ease;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100vh;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+  .menu__list .menu__option {
+    font-size: 4vh;
+    color: white;
+  }
+  .menu__list a {
+    display: block;
+  }
+  .menu__list a:hover {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  .menu__list.menu__list-open {
+    top: 150vh;
+  }
+  .menu__list.menu__list-open .menu__option {
+    font-size: 4vh;
+    color: white;
+  }
+  .menu__list.menu__list-open a {
+    display: block;
+  }
+  .track__texts {
+    max-width: 100%;
+  }
+}
+@media (max-width: 794px) {
+  .evo-black__texts {
+    display: block;
+  }
+  .evo-black__texts .evo-black__title {
+    margin-bottom: 30px;
+  }
+  .evo-black__texts .evo-black__content {
+    max-width: 100%;
+  }
+  .blog__blocks {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blog__blocks img {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .evo-black img {
+    width: 90%;
+  }
+  .blog__quotes {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+@media (max-width: 670px) {
+  .evo-black__descr dl {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    gap: 10px 0;
+  }
+  .evo-white__container::before {
+    display: none;
+  }
+  .menu__logo img {
+    height: 70px;
+  }
+  .landing__title {
+    font-size: 50px;
+  }
+  .landing__subtitle {
+    font-size: 30px;
+  }
+  .landing__subtitle span {
+    font-size: 20px;
+    text-shadow: 0 0 2px #ffffff;
+  }
+}
+@media (max-width: 550px) {
+  .evo-white__link {
+    margin-top: 0;
+  }
+  .footer,
+.blog,
+.swiper,
+.evo-white,
+.intdoducing__blocks {
+    padding-bottom: 50px;
+  }
+  .footer,
+.evo-white,
+.evo-black,
+.intdoducing__blocks {
+    padding-top: 50px;
+  }
+  .footer__info {
+    display: block;
+    margin-bottom: 50px;
+  }
+  .footer__contacts {
+    margin-bottom: 20px;
+  }
+  .footer__adress {
+    width: 100%;
+  }
+  .footer__bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px 0;
+  }
+}
+@media (max-width: 480px) {
+  .evo-black__container::after {
+    display: none;
+  }
+}
+@media (max-width: 340px) {
+  .landing__title {
+    font-size: 45px;
+  }
 }
