--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ h6 {
 @font-face {
   font-family: "Impact";
   weight: 400;
-  src: url("/fonts/Impact.woff2");
+  src: url("fonts/Impact.woff2");
 }
 
 a {
