--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body {
 
 .landing {
   position: relative;
-  background: url("img/bg.jpg") no-repeat center/cover;
+  background: url("../img/bg.jpg") no-repeat center/cover;
   min-height: 100vh;
 }
 
@@ -397,7 +397,7 @@ body {
   width: 100%;
   padding: 40px 0 40px 0;
   height: 100vh;
-  background: url("img/bg2.png") no-repeat center/cover;
+  background: url("../img/bg2.png") no-repeat center/cover;
   overflow: hidden;
 }
 
@@ -496,7 +496,7 @@ body {
 .evo-black__container::before {
   content: "";
   position: absolute;
-  background: url("img/pol1.svg") no-repeat center/contain;
+  background: url("../img/pol1.svg") no-repeat center/contain;
   width: 185px;
   height: 213px;
   left: -140px;
@@ -506,7 +506,7 @@ body {
 .evo-black__container::after {
   content: "";
   position: absolute;
-  background: url("img/pol2.svg") no-repeat center/contain;
+  background: url("../img/pol2.svg") no-repeat center/contain;
   width: 498px;
   height: 572px;
   left: -35px;
@@ -572,7 +572,7 @@ body {
 .evo-white__container::before {
   content: "";
   position: absolute;
-  background: url("img/pol3.png") no-repeat center/contain;
+  background: url("../img/pol3.png") no-repeat center/contain;
   width: 257px;
   height: 246px;
   left: 380px;
@@ -582,7 +582,7 @@ body {
 .evo-white__container::after {
   content: "";
   position: absolute;
-  background: url("img/pol4.png") no-repeat center/contain;
+  background: url("../img/pol4.png") no-repeat center/contain;
   width: 311px;
   height: 324px;
   left: 611px;
@@ -607,7 +607,7 @@ body {
 }
 
 .evo-white__link {
-  background: url("img/car-video.png") no-repeat center/contain;
+  background: url("../img/car-video.png") no-repeat center/contain;
   margin-top: 100px;
   height: 256px;
   width: 100%;
